# waffle-iron

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  INTERFACES.md  NEXT-SESSION.md  README.md  REVIEW.md  STATUS.md  VALIDATION.md  control-api.py  docker-compose.yml  run.sh  start.sh  stop.sh
.githooks/: pre-push
.github/workflows/: ci.yml
app/: package-lock.json  package.json  playwright.config.js  vite.config.js
app/src/: app.css  app.html
app/src/lib/engine/: bridge.js  logger.js  slvs-solver.js  store.svelte.js  worker.js
app/src/lib/sketch/: ConstraintMenu.svelte  DimensionInput.svelte  DimensionLabels.svelte  SketchInteraction.svelte  SketchRenderer.svelte  constraintLogic.js  profiles.js  sketchCoords.js  snap.js  tools.js
app/src/lib/ui/: ExtrudeDialog.svelte  FeatureTree.svelte  PropertyEditor.svelte  RevolveDialog.svelte  SketchPlaneDialog.svelte  StatusBar.svelte  ToastContainer.svelte  Toolbar.svelte  toast.svelte.js
app/src/lib/viewport/: BoxSelect.svelte  CadModel.svelte  CameraControls.svelte  DatumVis.svelte  EdgeOverlay.svelte  GridFloor.svelte  Lighting.svelte  Scene.svelte  SketchPlane.svelte  ViewCubeButtons.svelte  ViewCubeGizmo.svelte  Viewport.svelte  (+1 more)
app/src/routes/: +page.svelte
app/static/pkg/: wasm_bridge.js  wasm_bridge_bg.wasm
app/tests/: advanced-demo-workflow.mjs  pipeline.spec.js  screenshot-workflow.mjs  sketch.spec.js  smoke.spec.js
app/tests/gui/: README.md  constraint-toolbar.spec.js  construction-mode.spec.js  datum-planes.spec.js  dimension-tool.spec.js  error-paths.spec.js  extrude.spec.js  feature-tree-advanced.spec.js  feature-tree.spec.js  input-validation.spec.js  modeling-buttons.spec.js  pipeline.spec.js  revolve.spec.js  sketch-circle-workflow.spec.js  sketch-draw-diagnostic.spec.js  sketch-draw.spec.js  sketch-drawing-regression.spec.js  sketch-entry.spec.js  sketch-feedback.spec.js  sketch-finish.spec.js  sketch-on-face.spec.js  sketch-tools.spec.js  snap-labels.spec.js  undo-redo-advanced.spec.js  undo-redo.spec.js  viewport-advanced.spec.js  viewport.spec.js  workflow.spec.js
crates/feature-engine/: Cargo.toml
crates/feature-engine/src/: lib.rs  rebuild.rs  resolve.rs  tree.rs  types.rs  undo.rs
crates/feature-engine/tests/: engine_tests.rs
crates/file-format/: Cargo.toml
crates/file-format/src/: errors.rs  lib.rs  load.rs  metadata.rs  migrate.rs  save.rs  step_export.rs
crates/file-format/tests/: format_tests.rs
crates/kernel/: Cargo.toml
crates/kernel-fork/: Cargo.toml
crates/kernel-fork/src/: lib.rs  mock_kernel.rs  primitives.rs  tessellation.rs  traits.rs  truck_introspect.rs  truck_kernel.rs  types.rs
crates/kernel/src/: lib.rs  traits.rs
crates/kernel/src/boolean/: classify.rs  engine.rs  mod.rs  split.rs
crates/kernel/src/geometry/: curves.rs  intersection.rs  mod.rs  nurbs.rs  point.rs  surface_intersection.rs  surfaces.rs  transform.rs  vector.rs
crates/kernel/src/operations/: chamfer.rs  extrude.rs  feature.rs  fillet.rs  loft.rs  mod.rs  revolve.rs  sweep.rs
crates/kernel/src/topology/: brep.rs  euler.rs  mod.rs  primitives.rs
crates/kernel/src/validation/: audit.rs  config.rs  continuity.rs  geometry.rs  harness.rs  mod.rs  spatial.rs  types.rs  volume.rs
crates/kernel/tests/: proptest_tests.rs
crates/modeling-ops/: Cargo.toml
crates/modeling-ops/src/: boolean.rs  chamfer.rs  diff.rs  extrude.rs  fillet.rs  kernel_ext.rs  lib.rs  revolve.rs  shell.rs  types.rs
crates/modeling-ops/tests/: op_tests.rs
crates/render/: Cargo.toml
crates/render/src/: main.rs
crates/sketch-solver/: Cargo.toml
crates/sketch-solver/src/: constraint_mapping.rs  entity_mapping.rs  lib.rs  profiles.rs  solver.rs  status.rs  types.rs
crates/sketch-solver/tests/: solve_tests.rs
crates/slvs-patch/slvs-0.6.0/: .cargo_vcs_info.json  Cargo.toml  build.rs
crates/solver/: Cargo.toml
crates/solver/src/: assembly.rs  constraint.rs  lib.rs  sketch.rs  solver.rs
crates/tessellation/: Cargo.toml
crates/tessellation/src/: lib.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: assertions.rs  helpers.rs  lib.rs  oracle.rs  report.rs  stl.rs  workflow.rs
crates/test-harness/tests/: oracle_tests.rs  report_tests.rs  scenarios_advanced.rs  scenarios_mock.rs  scenarios_truck.rs  stl_tests.rs  workflow_tests.rs
crates/waffle-types/: Cargo.toml
crates/waffle-types/src/: geom_ref.rs  lib.rs  roles.rs  sketch.rs  topo.rs
crates/wasm-bridge/: Cargo.toml
crates/wasm-bridge/js/: bridge.js  worker.js
crates/wasm-bridge/src/: dispatch.rs  engine_state.rs  lib.rs  messages.rs  stl_export.rs  wasm_api.rs
crates/wasm-bridge/tests/: bridge_tests.rs  pipeline_tests.rs
docs/: AGENT-WORKFLOW.md  PERSISTENT-NAMING.md  SYSTEM-INTERFACES.md  TESTING-STRATEGY.md  gui-test-plan.md  gui-test-skeptic-report.md  test-tooling-design.md
docs/exports/: box.stl
gui/: package.json
gui/public/: index.html
gui/src/: App.tsx  index.tsx  types.ts
gui/src/components/: FeatureTree.tsx  Toolbar.tsx  Viewport.tsx
projects/01-kernel-fork/: ARCHITECTURE.md  CLAUDE.md  INTERFACES.md  PLAN.md
projects/02-sketch-solver/: ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  INTERFACES.md  PLAN.md  WASM_STRATEGY.md
projects/03-wasm-bridge/: ARCHITECTURE.md  CLAUDE.md  INTERFACES.md  PLAN.md
projects/04-3d-viewport/: ARCHITECTURE.md  CLAUDE.md  INTERFACES.md  PLAN.md
projects/05-sketch-ui/: ARCHITECTURE.md  CLAUDE.md  INTERFACES.md  PLAN.md
projects/06-feature-engine/: ARCHITECTURE.md  CLAUDE.md  INTERFACES.md  PLAN.md
projects/07-modeling-ops/: ARCHITECTURE.md  CLAUDE.md  INTERFACES.md  PLAN.md
projects/08-ui-chrome/: ARCHITECTURE.md  CLAUDE.md  INTERFACES.md  PLAN.md
projects/09-file-format/: ARCHITECTURE.md  CLAUDE.md  INTERFACES.md  PLAN.md
projects/10-assemblies/: ARCHITECTURE.md  CLAUDE.md  INTERFACES.md  PLAN.md
projects/11-test-harness/: PLAN.md
projects/12-design-review/: CLAUDE.md  PLAN.md
projects/13-dev-infrastructure/: ARCHITECTURE.md  CLAUDE.md  INTERFACES.md  PLAN.md
(+41 files in other folders)
