[workspace]
members = [
    "crates/kernel",
    "crates/tessellation",
    "crates/solver",
    "crates/wasm-bridge",
    "crates/render",
]
resolver = "2"

[workspace.dependencies]
nalgebra = "0.33"
approx = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
slotmap = { version = "1.0", features = ["serde"] }
