[package]
name = "feature-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel-fork = { path = "../kernel-fork" }
modeling-ops = { path = "../modeling-ops" }
waffle-types = { path = "../waffle-types" }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
