[package]
name = "file-format"
version = "0.1.0"
edition = "2021"

[dependencies]
feature-engine = { path = "../feature-engine" }
kernel-fork = { path = "../kernel-fork" }
waffle-types = { path = "../waffle-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
modeling-ops = { path = "../modeling-ops" }
