[package]
name = "kernel-fork"
version = "0.1.0"
edition = "2021"

[dependencies]
truck-topology = "0.6"
truck-geometry = "0.5"
truck-modeling = "0.6"
truck-shapeops = "0.4"
truck-meshalgo = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
