[package]
name = "cad-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = { workspace = true }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
slotmap = { workspace = true }

[dev-dependencies]
proptest = "1"
