[package]
name = "cad-wasm-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cad-kernel = { path = "../kernel" }
cad-tessellation = { path = "../tessellation" }
cad-solver = { path = "../solver" }
serde = { workspace = true }
serde_json = { workspace = true }
