[package]
name = "wasm-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native-solver"]
native-solver = ["sketch-solver"]

[dependencies]
feature-engine = { path = "../feature-engine" }
kernel-fork = { path = "../kernel-fork" }
modeling-ops = { path = "../modeling-ops" }
sketch-solver = { path = "../sketch-solver", optional = true }
file-format = { path = "../file-format" }
waffle-types = { path = "../waffle-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
